# sagemaker-pilot

./: setup.cfg
eda/: view_fy23_data.ipynb
src/srt_ml/: __init__.py  train.py
src/srt_ml/predict/: main.py  predict.py
